<resources>
    <string name="app_name">MyTasks</string>
    <string name="myTasks">My Tasks</string>
    <string name="backBtn">Back Btn</string>
    <string name="welcome">WELCOME!</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_the_password">write the password</string>
    <string name="or">OR</string>
    <string name="log_in_twitter">Log In or Sign Up by using Twitter</string>
    <string name="log_in_google">Log In or Sign Up by using Google</string>
    <string name="log_in_facebook">Log In or Sign Up by using Facebook</string>
    <string name="got_to_log_in_layout_button">got to Log In Layout</string>
    <string name="important">Important</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_new_list">Create New List</string>
    <string name="complete_tasks">Complete Tasks</string>
    <string name="delete_all_tasks">Delete All Tasks</string>
    <string name="delete_complete_tasks">Delete Complete Tasks</string>
    <string name="rename">Rename</string>
    <string name="create_list">Create List</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="date_descending">Date Descending</string>
    <string name="name_ascending">Name Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="create_new_list">Create New List</string>
    <string name="name_this_list">Name this list</string>
    <string name="cancel">CANCEL</string>
    <string name="create_list_cap">CREATE LIST</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_list">Delete List</string>
    <string name="log_in_by_google">Log In by Google</string>
    <string name="complete">Complete</string>
    <string name="click_for_more_features">Click for More Features</string>
    <string name="task_lists">Task Lists</string>
    <string name="click_for_sort_the_list">Click for Sort the List</string>
    <string name="new_list">New List</string>
    <string name="add_details">Add Details</string>
    <string name="open_calendar">open calendar for set date and time for your task</string>
    <string name="add_this_task_for_important">Add this task for important</string>
    <string name="save">Save</string>
    <string name="Default">Default</string>
    <string name="click_for_create_new_task_list">click for create new task list</string>
    <string name="open_time">Open Time</string>
    <string name="open_for_repeat">Open For Repeat</string>
    <string name="cancel_button">Cancel button</string>
    <string name="repeat_every">Repeat every …</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="done">DONE</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="set_due_date">Set due date</string>
    <string name="select_time_intervals">Select time intervals</string>
    <string name="completed_8">Completed(8)</string>
    <string name="_8">8</string>
    <string name="one">1</string>
    <string name="refresh">Refresh</string>
    <string name="rename_list">Rename List</string>
    <string name="completed_tasks">Completed(%d)</string>
    <string name="reorder_tasks">Reorder tasks</string>
    <string name="tasks_name">Tasks Name</string>
    <string name="title">Title</string>
    <string name="add_date">Add date</string>
    <string name="add_time">Add time</string>
    <string name="repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="move_task_to">Move task to</string>
    <string name="add_repeat">Add repeat</string>
    <string name="delete_all_tasks_lists">Delete all tasks lists</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="set_time">Set time</string>
    <string name="remind_me">Remind me</string>
    <string name="timee">Time</string>
    <string name="setTime">%1$d:%2$s %3$s</string>
    <string name="add_remind_me">Add Remind Me</string>
</resources>