<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/renameList"
        android:title="@string/rename_list"/>

    <item
        android:id="@+id/deleteList"
        android:title="@string/delete_list"/>

    <item
        android:id="@+id/deleteCompleteList"
        android:title="@string/delete_complete_tasks"/>

    <item
        android:id="@+id/deleteAllTasks"
        android:title="@string/delete_all_tasks"/>

    <item
        android:id="@+id/sendCopy"
        android:title="@string/send_a_copy"/>

    <item
        android:id="@+id/sortBy"
        android:title="@string/sort_by">

        <menu>

            <item
                android:id="@+id/defaultSort"
                android:title="@string/Default"/>

            <item
                android:id="@+id/nameAsc"
                android:title="@string/name_ascending" />

            <item
                android:id="@+id/nameDesc"
                android:title="@string/name_descending" />

        </menu>

    </item>

</menu>