<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/sortBy"
        android:title="@string/sort_by">

        <menu>
            <item
                android:id="@+id/defaultSort"
                android:title="@string/Default"/>

            <item
                android:id="@+id/nameAsc"
                android:title="@string/name_ascending" />

            <item
                android:id="@+id/nameDesc"
                android:title="@string/name_descending" />
        </menu>
    </item>

</menu>