<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_box_bg">

        <EditText
            android:id="@+id/addTitle"
            style="@style/NoEditTextBorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#858587"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="@string/new_list" />

        <Button
            android:id="@+id/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/baseline_arrow_upward_24"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/open_calendar"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/addDetails"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/addDetails"
            style="@style/NoEditTextBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/add_details"
            android:scrollbars="vertical"
            android:textColor="#100808"
            android:textColorHint="#858587"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addTitle"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/showDateTimeRepeatDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addDetails">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rect"
                android:backgroundTint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/showTimeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text=" Sat,Aug 21, 07:05 PM "
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/inside"
                    app:layout_constraintStart_toStartOf="@id/inside"
                    app:layout_constraintTop_toTopOf="@id/inside" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/baseline_close_24"
                    android:backgroundTint="@color/bkg_blue"
                    android:contentDescription="@string/cancel_button"
                    app:layout_constraintBottom_toBottomOf="@id/inside"
                    app:layout_constraintEnd_toEndOf="@id/inside"
                    app:layout_constraintStart_toEndOf="@id/showTimeDetail"
                    app:layout_constraintTop_toTopOf="@id/inside"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/showDetailEditText"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/menu_48px"
            android:contentDescription="@string/add_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showDateTimeRepeatDetail"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/showCalendar"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/baseline_calendar_month_24"
            android:contentDescription="@string/open_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/showDetailEditText"
            app:layout_constraintTop_toBottomOf="@id/showDateTimeRepeatDetail"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/showTime"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/time"
            android:contentDescription="@string/open_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/showCalendar"
            app:layout_constraintTop_toBottomOf="@id/showDateTimeRepeatDetail"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/showRepeat"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/baseline_repeat_24"
            android:contentDescription="@string/open_for_repeat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/showTime"
            app:layout_constraintTop_toBottomOf="@id/showDateTimeRepeatDetail"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/addImportant"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/baseline_star_outline_24"
            android:contentDescription="@string/add_this_task_for_important"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/showRepeat"
            app:layout_constraintTop_toBottomOf="@id/showDateTimeRepeatDetail"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>