<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/dialogBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addTitle"
            style="@style/dialogBoxEdittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:autofillHints="textMultiLine"
            android:hint="@string/new_list"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#858587"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/baseline_arrow_upward_24"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/open_calendar"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/addDetails"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/addDetails"
            style="@style/dialogBoxEdittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:autofillHints="textMultiLine"
            android:hint="@string/add_details"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textColorHint="#858587"
            app:layout_constraintEnd_toStartOf="@id/cancelDetailBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addTitle"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/cancelDetailBtn"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/baseline_close_24"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insideRemindMe"
            style="@style/dialogCL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addDetails">

            <TextView
                android:id="@+id/showRemindMe"
                style="@style/textColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/insideRemindMe"
                app:layout_constraintEnd_toStartOf="@id/cancelRemindMeDetailBtn"
                app:layout_constraintStart_toStartOf="@id/insideRemindMe"
                app:layout_constraintTop_toTopOf="@id/insideRemindMe"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cancelRemindMeDetailBtn"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/baseline_close_24"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="@id/insideRemindMe"
                app:layout_constraintEnd_toEndOf="@id/insideRemindMe"
                app:layout_constraintTop_toTopOf="@id/insideRemindMe"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/showDetailEditText"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/menu_28px"
            android:contentDescription="@string/add_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insideRemindMe"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/addImportant"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/baseline_star_outline_24"
            android:contentDescription="@string/add_this_task_for_important"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/showDetailEditText"
            app:layout_constraintTop_toBottomOf="@id/insideRemindMe"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/iconRemind"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/notifications_48px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/addImportant"
            app:layout_constraintTop_toBottomOf="@id/insideRemindMe"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>